--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Untitled Document</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"
+      integrity="sha512-FHsFVKQ/T1KWJDGSbrUhTJyS1ph3eRrxI228ND0EGaEp6v4a/vGwPWd3Dtd/+9cI7ccofZvl/wulICEurHN1pg=="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter2/1.4.7/crossfilter.min.js"
+      integrity="sha256-uzsb4661qT8a2H5HIwdeGofsQu6EkVHOyZCnx1Ndg+E="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.8/dc.min.js"
+      integrity="sha512-SJ6o0PR+Dj6RLwsJItdfcl2h2xAmuXOFo+uQItzR3yh6bxhfS3NpxDHOGyXSj+OpCgMDo+g5eXXk8OnxudRCrA=="
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -35,6 +50,23 @@
 
   <body class="bg-light">
     <h1>This is the charting template</h1>
+    <div class="card-group">
+      <div class="card m-1">
+        <div class="card-body" id="companiesBarChart">
+          <h5 class="card-title text-left">
+            Companies Bar Chart
+            <span
+              ><a
+                class="reset"
+                style="display: none"
+                href="javascript: companiesBarChart.filterAll(); dc.redrawAll();"
+                >reset</a
+              ></span
+            >
+          </h5>
+        </div>
+      </div>
+    </div>
     <script src="/index.js"></script>
   </body>
 </html>
